# swagger.json
@@ -162,42 +162,6 @@
         }
       }
     },
-    "/students/grado": {
-      "get": {
-        "description": "Get a student's classes by ID",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "grado": {
-                  "type": "integer",
-                  "example": 5
-                },
-                "seccion": {
-                  "type": "string",
-                  "example": "A"
-                }
-              },
-              "required": ["grado", "seccion"]
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
     "/professors": {
       "get": {
         "description": "Get all professors",
